tests/fixtures/valid/run_string_slice.lby
fn main -> string
    let s string = "hello world"
    s[0:5] + "|" + s[6:] + "|" + s[:5] + "|" + s[8:11]
