tests/fixtures/invalid/slice_non_int_bound.lby
fn main -> string
    "hello"[true:2]
